@@ -15,6 +15,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #7909: Do not touch paths with the special prefixes ``\\.\``
+  or ``\\?\`` in ntpath.normpath().
+
 - Issue #1286: Allow using fileinput.FileInput as a context manager.
 
 - Add lfu_cache() and lru_cache() decorators to the functools module.
